fixing the order table spacing

--- a/app/admin/dashboard/orders/orders.css
+++ b/app/admin/dashboard/orders/orders.css
@@ -7,7 +7,8 @@
   tr {
     display: grid;
     width: 100%;
-    grid-template-columns: auto minmax(8rem, 1fr) 8rem 10rem 5rem 5rem;
+    grid-template-columns: auto minmax(8rem, 1fr) 8rem 15rem 5rem 5rem;
+    gap: 1rem;
     padding: 0.7em 0;
     border-bottom: 1px solid #d6d2d4;
     align-items: center;
@@ -18,7 +19,8 @@
     font-size: var(--text-xs);
   }
   td {
-    text-align: center;
+    width: 100%;
+    overflow: auto;
   }
 }
 
@@ -37,7 +39,7 @@
 @media only screen and (--viewport-medium) {
   .orders {
     tr {
-      grid-template-columns: 1.5rem 1fr 8rem 10rem 5rem 5rem;
+      grid-template-columns: 1.5rem 1fr 8rem 15rem 5rem 5rem;
     }
   }
 }
